test/sema/import-header-twice/b.delta
// RUN: %delta -typecheck ./a.delta ./b.delta | %FileCheck -allow-empty %s

import "header.h"

func main() {
    // CHECK-NOT: error: ambiguous reference to 'foo'
    foo(a)
}
